[tool.poetry]
name = "auth-wis"
version = "0.6.0"
description = "The Web Interview System (WIS) component of AUTH."
authors = ["Sal Borrelli <sb@insomniacdesign.com>"]
readme = "README.md"
packages = [{include = "app"}, {include = "cli"}]
include = [
    "alembic.ini",
    "tests/data/*json"
]
[tool.poetry.scripts]
dump_json = "cli.dump_schema:app"
[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.95.2"}
pylint = "^2.17.4"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.15"}
typer = "^0.9.0"
pytest = "^7.3.1"
python-multipart = "^0.0.6"
python-jose = "^3.3.0"
bcrypt = "4.0.1"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}

aiosqlite = "^0.19.0"
anyio = "^3.7.0"
pytest-asyncio = "^0.21.0"
alembic = "^1.11.1"
jsonschema = "^4.17.3"
firebase-admin = "^6.1.0"
redis = {extras = ["hiredis"], version = "^4.5.5"}
python-magic = "^0.4.27"
pandas = "^2.0.3"
openpyxl = "^3.1.2"
dictdiffer = "^0.9.0"
black = {extras = ["d"], version = "^23.9.1"}
natsort = "^8.4.0"
unidecode = "^1.3.7"
orjson = "^3.9.12"
jose = "^1.0.0"
asyncpg = "^0.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
markers = [
    "firebase: run integration tests against firebase auth emulator (use with --firebase argument)",
]
log_level = "WARNING"
log_cli = true

[tool.black]
line-length = 79
