[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "package-name"
version = "0.1.0"
description = "Description of your package"
authors = ["Your Name <your@email.com>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = ">=1.21.0, <2.0.0"

[[tool.poetry.source]]
name = "pypi"